--- a/CadastroPessoa.API/appsettings.json
+++ b/CadastroPessoa.API/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+
+    "DefaultConnection": "Host=localhost;Port=5432;Pooling=true;Database=pessoas_db;User Id=postgres;Password=admin"
+
+  },
   "AllowedHosts": "*"
 }
