--- a/CadastroPessoa.API/appsettings.json
+++ b/CadastroPessoa.API/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "“ConnectionStrings”": {
+
+    "“DefaultConnection”": ""
+
+  },
   "AllowedHosts": "*"
 }
